# runowl

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: args.ts  ask.ts  cli.ts  help.ts  review.ts  runner.ts  which.ts
docs/: brand-strategy.md  launch-blog-post.md  launch-posts.md  milestones.md  phase-2a-tasks.md  phase-2b-tasks.md  phase-5-tasks.md  product-roadmap.md
docs/contributing/: INSTALLATION.md
docs/launch/: product-hunt-listing.md
docs/phases/: phase-1-tasks.md  phase-2a-tasks.md  phase-2b-tasks.md  phase-3-tasks.md  phase-4-tasks.md
src/: config.py  main.py
src/architecture/: __init__.py  checks.py  models.py  solid.py
src/freemium/: __init__.py  gate.py  license.py  models.py  prompt.py  router.py
src/github/: __init__.py  client.py  diff.py  models.py  parser.py
src/qa/: __init__.py  engine.py  models.py  selection.py
src/reasoning/: __init__.py  context.py  engine.py  models.py  prompts.py
src/review/: __init__.py  agent.py  citations.py  formatter.py  models.py  parser.py  router.py  severity.py
src/runowl/: __init__.py  cli.py
src/sandbox/: __init__.py  bootstrap.ts  limits.py  runner.py
src/security/: __init__.py  checks.py  deep_checks.py  deep_scanner.py  models.py  scanner.py
src/testing/: __init__.py  detector.py  docker_runner.py  executor.py  generator.py  models.py  prompts.py  recorder.py  replay.py  results.py  router.py  sandbox_runner.py
src/webhook/: __init__.py  check_run.py  models.py  reviewer.py  router.py  signature.py
tests/: conftest.py
tests/e2e/: conftest.py  test_cli_pipeline.py  test_diff_pipeline.py  test_freemium_pipeline.py  test_github_pipeline.py  test_qa_pipeline.py  test_review_pipeline.py  test_sandbox_pipeline.py  test_security_pipeline.py  test_testing_pipeline.py  (+1 more)
website/: package-lock.json
(+48 files in other folders)
