[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "runowl"
version = "0.1.0"
description = "AI agent that reviews code, generates tests, and runs them before merge"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "RunOwl" }]
keywords = ["ai", "code-review", "github", "pr", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.34.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "tenacity>=9.0.0",
    "cachetools>=5.5.0",
    "anthropic>=0.40.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
    "black>=25.0.0",
    "mypy>=1.14.0",
    "types-cachetools>=6.2.0",
]

[project.scripts]
runowl = "runowl.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Pure unit tests — no I/O, no mocked APIs",
    "integration: Integration tests — mocked HTTP/API calls, ASGI transport",
    "e2e: End-to-end tests — real API calls, full pipeline",
    "evals: AI evaluation tests — quality, accuracy, precision/recall of AI features",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
